syntax="proto3";

package sts;
option go_package="sts";

service Sts {
    rpc GenerateToken (TokenRequest) returns (TokenResponse) {}
}
  
message TokenRequest {
    string client_id = 1;
    string client_secret = 2;
}
  
message TokenResponse {
    string token = 1;
}